--- a/src/home.css
+++ b/src/home.css
@@ -19,19 +19,19 @@
 
 .main-content.purple {
     background-color: #4906cd80;
-     box-shadow: 0 0 7px #b980fb86;
+    box-shadow: 0 0 7px #b980fb86;
 }
 
 .banner-container {
     margin-top: 0.5%;
     position: relative; /* parent of banners */
     width: 170%;
-    height: auto; 
+    height: 75%; 
 }
 
 .banner {
     position: absolute; /* stack banners on top of each other */
-    top: -1.9%;
+    top: -1.4%;
     left: 0;
     border-radius: 10px;
     width: 100%;
@@ -69,8 +69,21 @@
 }
 
 .text-game {
-    padding-left: 20px;
+    padding-left: 5%;
+    line-height: 160%;
     text-align:left;
 }
 
+#launch {
+  font-family: rogfontfull;
+  background-color:rgb(3, 155, 99);
+  margin:auto;
+  margin-top: 6%;
+  margin-bottom: -20%;
+  z-index: 0;
+  transition: all 300ms ease;
+}
 
+#launch:hover {
+  background-color:rgb(11, 229, 149);
+}
