--- a/src/home.css
+++ b/src/home.css
@@ -5,21 +5,20 @@
     padding: 30px;
     border-radius: 5px;
     width: 100%;
-    height: 71%;
+    height: 66vh;
     margin-left: -2.5%;
     margin-right: auto;
     transition: all 600ms ease;
     background-color: rgb(46, 47, 47);
+    box-shadow: 0 0 7px #121212;
 }
 
 .main-content.blue{
-    background-color: #0c5ccc70;
-    box-shadow: 0 0 7px #88a8ff91;
+    background-color: #1c74f0bb;
 }
 
 .main-content.purple {
-    background-color: #4906cd80;
-    box-shadow: 0 0 7px #b980fb86;
+    background-color: #7d3cffb0;
 }
 
 .banner-container {
@@ -31,7 +30,6 @@
 
 .banner {
     position: absolute; /* stack banners on top of each other */
-    top: -1.4%;
     left: 0;
     border-radius: 10px;
     width: 100%;
@@ -39,6 +37,7 @@
     opacity: 0;
     transform: translate(0, 0);
     display: flex;
+    height: 66vh;
     transition: all 600ms ease;
 }
 
@@ -76,7 +75,7 @@
 
 #launch {
   font-family: rogfontfull;
-  background-color:rgb(3, 155, 99);
+  background-color:rgb(23, 224, 150);
   margin:auto;
   margin-top: 6%;
   margin-bottom: -20%;
@@ -85,5 +84,5 @@
 }
 
 #launch:hover {
-  background-color:rgb(11, 229, 149);
+  background-color:rgb(51, 254, 179);
 }
